--- a/style.css
+++ b/style.css
@@ -125,25 +125,29 @@ main {
 }
 
 @media (max-width: 1200px) {
-  .projects .projects___container .year, .projects .projects___container .kinds {
+  .projects .projects___container .year,
+  .projects .projects___container .kinds {
     display: none;
   }
 }
 
-.members, .about {
+.members,
+.about {
   padding-left: 36px;
   padding-right: 36px;
   margin-bottom: 60px;
 }
 
 @media (max-width: 1200px) {
-  .members, .about {
+  .members,
+  .about {
     padding-left: 20px;
     padding-right: 20px;
   }
 }
 
-.members h2, .about h2 {
+.members h2,
+.about h2 {
   font-size: 26px;
   line-height: 1.8;
   font-weight: 300;
@@ -151,12 +155,14 @@ main {
 }
 
 @media (max-width: 1200px) {
-  .members h2, .about h2 {
+  .members h2,
+  .about h2 {
     font-size: 22px;
   }
 }
 
-.members h2 span, .about h2 span {
+.members h2 span,
+.about h2 span {
   font-family: "Roboto";
   letter-spacing: 0.4px;
   font-size: 14px;
@@ -165,20 +171,24 @@ main {
 }
 
 @media (max-width: 1200px) {
-  .members h2 span, .about h2 span {
+  .members h2 span,
+  .about h2 span {
     font-size: 12px;
   }
 }
 
-.members h2 a, .about h2 a {
+.members h2 a,
+.about h2 a {
   color: #303030;
 }
 
-.members h2 a:hover, .about h2 a:hover {
+.members h2 a:hover,
+.about h2 a:hover {
   font-style: italic;
 }
 
-.members p, .about p {
+.members p,
+.about p {
   margin-top: 30px;
   font-size: 12px;
   font-family: "Roboto";
@@ -238,7 +248,8 @@ main {
   display: flex;
 }
 
-.projects___details .image .left, .projects___details .image .right {
+.projects___details .image .left,
+.projects___details .image .right {
   position: absolute;
   width: 50%;
   height: 100%;
@@ -292,7 +303,6 @@ main {
   width: 10px;
   height: 10px;
   background-color: #ccc;
-  cursor: pointer;
 }
 
 .projects___details .control .indicator.active {
